# NextCamStreamProxy

./: CMakeLists.txt  NextProxyMonitor.cpp  NextProxyServerMediaSession.cpp  NextRtspProxy.cpp  QosMeasurementRecord.cpp  README.md  live555-jni.cpp
include/: NextProxyMonitor.hh  NextProxyServerMediaSession.hh  QosMeasurementRecord.hh
